<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:title="@string/home"
            android:icon="@drawable/ic_baseline_home"/>
        <item
            android:id="@+id/nav_search"
            android:title="@string/search_nearby_hospitals"
            android:icon="@drawable/ic_dashboard"/>

    </group>

    <item
        android:title="@string/profile_top">
        <menu>
            <group android:checkableBehavior="single">

                <item
                    android:id="@+id/nav_login"
                    android:title="@string/login"
                    android:icon="@drawable/ic_login"/>
                <item
                    android:id="@+id/nav_profile"
                    android:title="@string/profile"
                    android:icon="@drawable/ic_baseline_streetview_24"/>
                <item
                    android:id="@+id/nav_logout"
                    android:title="@string/logout"
                    android:icon="@drawable/logout"/>

            </group>
        </menu>
    </item>


    <item
        android:title="@string/share_top">
        <menu>
            <group android:checkableBehavior="none">

                <item
                    android:id="@+id/nal_rate"
                    android:title="@string/rate_us"
                    android:icon="@drawable/ic_star_rate"/>
                <item
                    android:id="@+id/nal_share"
                    android:title="@string/share"
                    android:icon="@drawable/ic_share"/>

            </group>
        </menu>
    </item>





</menu>